--- a/styles.css
+++ b/styles.css
@@ -270,7 +270,6 @@ a:hover {
 
 
 
-
 /*CARDS 2*/
 .section-otras-tiendas {
     background-color: #ffffff;
@@ -327,4 +326,75 @@ a:hover {
     font-size: 13px;
     color: #000;
     font-weight: 400;
+}
+.barrita {
+    width: 50px;
+    height: 4px;
+    background-color: #2c1248;
+    margin: 10px auto 0;
+    border-radius: 2px;
+}
+
+/*CARRUSCEL*/
+.carousel-inner .row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px; 
+    margin: 0 auto;
+  }
+  .carousel-inner .col-12.col-sm-4 {
+    max-width: 390px;
+    flex: 0 0 auto;
+    padding: 0; 
+    text-align: center;
+  }
+.containerr {
+    background-color: #f1f1f1;
+    margin-top: 55px;
+    padding-top: 50px;
+    padding-bottom: 80px;
+}
+
+.img-carousel {
+    width: 100%;
+    max-height: 325px;
+    object-fit: contain;
+    margin: 0 auto;
+    display: block;
+    padding: 0;
+    margin-bottom: 32px;
+  }
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    background-color: #2c1248;
+    background-size: 80% 80%;
+    padding: 20px;
+    border-radius: 25%;
+}
+
+.section-como-funciona h2 {
+    font-family: 'Karla', sans-serif;
+    font-size: 20px;
+    color: black;
+    font-weight: bold;
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+.nueva-tienda {
+    background-color: #2C1248;
+    color: white;
+    padding: 21.6px;
+    width: 80px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: bold;
+    font-family: 'Karla', sans-serif;
+    padding: 25px 110px 25px 110px;
+}
+
+.nueva-tienda:hover {
+    text-decoration: underline;
 }
