--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,9 @@ body {
 }
 
 .navegador {
-    background: url(./assets/foto.png);
-    background-size: cover;
+    background:
+        linear-gradient(rgba(44, 18, 72, 0.35), rgba(44, 18, 72, 0.35)),
+        url(./assets/foto.png) center center / cover no-repeat;
     padding: 15px 30px;
     height: 410px;
     justify-content: space-between;
@@ -19,6 +20,7 @@ body {
     display: flex;
     align-items: center;
 }
+
 
 .barra-navegacion {
     display: flex;
@@ -327,6 +329,7 @@ a:hover {
     color: #000;
     font-weight: 400;
 }
+
 .barrita {
     width: 50px;
     height: 4px;
@@ -340,15 +343,17 @@ a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 15px; 
+    gap: 15px;
     margin: 0 auto;
-  }
-  .carousel-inner .col-12.col-sm-4 {
+}
+
+.carousel-inner .col-12.col-sm-4 {
     max-width: 390px;
     flex: 0 0 auto;
-    padding: 0; 
+    padding: 0;
     text-align: center;
-  }
+}
+
 .containerr {
     background-color: #f1f1f1;
     margin-top: 55px;
@@ -364,7 +369,7 @@ a:hover {
     display: block;
     padding: 0;
     margin-bottom: 32px;
-  }
+}
 
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
@@ -398,3 +403,186 @@ a:hover {
 .nueva-tienda:hover {
     text-decoration: underline;
 }
+
+/*seccion de formulario */
+.section-suscripcion {
+    background-color: #fff;
+    padding: 50px 20px;
+    text-align: center;
+}
+
+.section-suscripcion h2 {
+    font-family: 'Karla', sans-serif;
+    color: black;
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+
+.form-suscripcion {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.input-group-suscripcion {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+.input-group-suscripcion input[type="email"] {
+    padding: 5px 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+    width: 365px;
+    font-size: 14px;
+    font-family: 'Karla', sans-serif;
+}
+
+.input-group-suscripcion button {
+    padding: 12px 40px;
+    border: none;
+    background-color: #2c1248;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 5px;
+    font-family: 'Karla', sans-serif;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+/*abrir tienda*/
+.section-more {
+    background: 
+      linear-gradient(rgba(44, 18, 72, 0.6), rgba(44, 18, 72, 0.6)),
+      url(./assets/fondo-01.jpg) center center / cover no-repeat;
+    position: relative;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.container3 {
+    position: relative;
+    z-index: 2;
+    color: white;
+    max-width: 800px;
+}
+
+.section-more h2 {
+    font-family: system-ui, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
+    font-size: 21px;
+    font-weight: 600;
+    margin-bottom: 80px;
+}
+h2{
+    width: 520px;
+}
+
+.section-more .nueva-tienda {
+    background-color: #2c1248;
+    border-radius: 5px;
+    font-weight: bold;
+    font-family: 'Karla', sans-serif;
+    color: white;
+    text-decoration: none;
+    font-size: 14px;
+    border: 3px solid white;
+    margin-top: 20px;
+}
+
+
+/*footer*/
+.kichink-footer {
+    background-color: #e5e5e5;
+    padding: 50px 0 30px;
+    font-family: 'Arial', sans-serif;
+    font-size: 14px;
+    color: #6b6b6b;
+    margin-top: 40px;
+  }
+  
+  .footer-container {
+    max-width: 1300px;
+    margin: auto;
+    padding: 0 30px;
+  }
+  
+  .footer-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+  }
+  
+  .footer-logo img {
+    height: 40px;
+    margin-right: 30px;
+  }
+  
+  .footer-column {
+    flex: 1 1 160px;
+    margin: 0 70px;
+  }
+  
+  .footer-column h4 {
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 12px;
+  }
+  
+  .footer-column ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .footer-column ul li {
+    margin-bottom: 8px;
+  }
+  
+  .footer-column ul li a {
+    color: #727272;
+    text-decoration: none;
+    font-size: 12px;
+  }
+  
+  .footer-column ul li a:hover {
+    text-decoration: underline;
+  }
+  
+  .store-btn {
+    height: 40px;
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  .footer-phone img {
+    height: 180px;
+    margin-left: 10px;
+  }
+  
+  .footer-links {
+    text-align: center;
+    margin-top: 40px;
+    font-size: 13px;
+    color: #727272;
+  }
+  
+  .footer-links a {
+    color: #727272;
+    text-decoration: none;
+    margin: 0 5px;
+    font-size: 13px;
+  }
+  
+  .footer-links a:hover {
+    text-decoration: underline;
+  }
+  
+  
