--- a/estilosProdSof.css
+++ b/estilosProdSof.css
@@ -220,7 +220,6 @@ img {
     justify-content: center;
     flex-wrap: wrap;
     border-bottom: 5px;
-
 }
 
 .producto {
@@ -293,4 +292,59 @@ img {
 }
 
 
+/**/
+.footer {
+    background-color: #f8f8f8;
+    padding: 15px 120px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    font-family: Arial, sans-serif;
+    color: #777;
+}
 
+.footer-col {
+    flex: 1;
+    min-width: 180px;
+    margin: 10px;
+}
+
+.footer-col h4 {
+    color: #888;
+    margin-bottom: 15px;
+}
+
+.footer-logo {
+    width: 120px;
+    margin-bottom: 10px;
+}
+
+.footer-col p {
+    margin: 5px 0;
+    font-size: 14px;
+}
+
+.footer-col i {
+    margin-right: 8px;
+}
+
+.store-links h4 {
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.store-links a {
+    text-align: right;
+    color: #663399;
+    font-size: 13px;
+    text-decoration: none;
+    display: block;
+    margin: 10px 0;
+}
+
+
+.store-img {
+    width: 140px;
+    margin: 10px 0;
+    display: block;
+}
